# box

./: .drone.yml  .gitignore  .gitmodules  Makefile  README.md  _box.zsh  boris-git.toml  boris.toml  box-completion.bash  box.cabal  box.lock-7.10.2  box.lock-8.0.1  box.submodules  cabal  mafia  master.toml
main/: box.hs
src/: Box.hs
src/Box/: Cache.hs  Completion.hs  Data.hs  Parse.hs  Prelude.hs  Query.hs  Store.hs
test/: main.hs  test-cli.hs  test-io.hs  test.hs
test/Box/: Arbitrary.hs  ParseTest.hs  QuerySpec.hs  QueryTest.hs
test/Test/Box/: Arbitrary.hs  Completion.hs  Data.hs  Parse.hs  Query.hs
test/Test/IO/Box/: Cache.hs  Store.hs
test/cli/basic/: altenv.v2  altenv.v3  run  v1  v2  v3
