name:                  box
version:               0.0.1
license:               AllRightsReserved
author:                Mark Hibberd <mark@hibberd.id.au>
maintainer:            Mark Hibberd <mark@hibberd.id.au>
copyright:             (c) 2014 Mark Hibberd
synopsis:              select a host from a given query
category:              System.Console
cabal-version:         >= 1.8
build-type:            Simple
description:           box

library
  build-depends:
                       base                            == 4.*
                     , text                            == 1.1.*
                     , lens                            == 4.4.*
                     , attoparsec                      == 0.12.*
                     , optparse-applicative            == 0.11.*
                     , wreq                            == 0.2.0.*
                     , aeson                           == 0.7.0.*
                     , lens-aeson                      == 1.0.0.*
                     , containers                      == 0.5.5.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_box
                       Box
                       Box.Prelude
                       Box.Data
                       Box.Query
                       Box.Parse

executable             box
    ghc-options:      -Wall -threaded -O2
    main-is:           main/box.hs
    build-depends:    base, box

test-suite test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base >= 3          && < 5
                     , box
                     , Cabal
                     , text       == 1.1.*
                     , QuickCheck == 2.7.6
                     , p
                     , disorder-core
