name:                  box
version:               0.0.1
license:               AllRightsReserved
author:                Mark Hibberd <mark@hibberd.id.au>
maintainer:            Mark Hibberd <mark@hibberd.id.au>
copyright:             (c) 2014 Mark Hibberd
synopsis:              select a host from a given query
category:              System.Console
cabal-version:         >= 1.8
build-type:            Custom
description:           box

library
  build-depends:
                       base                            >= 3          && < 5
                     , attoparsec                      == 0.12.*
                     , directory                       == 1.2.*
                     , either                          == 4.3.*
                     , Glob                            == 0.7.*
                     , mismi-s3
                     , p
                     , random-shuffle                  == 0.0.4
                     , transformers                    >= 0.3        && < 0.5
                     , text                            == 1.2.*

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_box
                       Box
                       Box.Data
                       Box.Query
                       Box.Store


executable             box
    ghc-options:      -Wall -threaded -O2
    main-is:           main/box.hs
    build-depends:     base
                     , box
                     , either
                     , mismi-s3
                     , optparse-applicative            == 0.11.*
                     , p
                     , text
                     , transformers                    >= 0.3        && < 0.5
                     , unix                            == 2.7.*
                     , x-optparse

test-suite test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , box
                     , disorder-core
                     , disorder-corpus
                     , p
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , text

test-suite test-io
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test-io.hs
  build-depends:       base
                     , box
                     , disorder-core
                     , disorder-corpus
                     , p
                     , mismi-s3
                     , mismi-s3-test
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , text

test-suite test-cli
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test-cli.hs
  build-depends:       base
                     , box
                     , disorder-core
