name:                  ambiata-box
version:               0.0.1
license:               AllRightsReserved
author:                Mark Hibberd <mark@hibberd.id.au>
maintainer:            Mark Hibberd <mark@hibberd.id.au>
copyright:             (c) 2014 Mark Hibberd
synopsis:              select a host from a given query
category:              System.Console
cabal-version:         >= 1.8
build-type:            Custom
description:           box

library
  build-depends:
                       base                            >= 3          && < 5
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-p
                     , ambiata-x-eithert
                     , attoparsec                      >= 0.12       && < 0.14
                     , directory                       == 1.2.*
                     , filepath                        >= 1.3        && < 1.5
                     , random-shuffle                  == 0.0.4
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.8
                     , transformers                    >= 0.3        && < 0.6

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Paths_ambiata_box
                       Box
                       Box.Completion
                       Box.Cache
                       Box.Data
                       Box.Query
                       Box.Store


executable             box
    ghc-options:      -Wall -threaded -O2
    hs-source-dirs:    gen
    main-is:           ../main/box.hs
    build-depends:     base                            >= 3          && < 5
                     , ambiata-box
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-p
                     , ambiata-x-optparse
                     , ambiata-x-eithert
                     , attoparsec                      >= 0.12       && < 0.14
                     , async                           == 2.1.*
                     , boxes                           == 0.1.*
                     , directory                       == 1.2.*
                     , filepath                        >= 1.3        && < 1.5
                     , optparse-applicative            >= 0.14       && < 0.15
                     , process                         == 1.4.*
                     , text                            == 1.2.*
                     , time                            >= 1.4        && < 1.7
                     , transformers                    >= 0.3        && < 0.6
                     , unix                            == 2.7.*

test-suite test
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base                            >= 3          && < 5
                     , ambiata-box
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-p
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , text                            == 1.2.*

test-suite test-io
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test-io.hs
  build-depends:       base                            >= 3          && < 5
                     , ambiata-box
                     , ambiata-disorder-core
                     , ambiata-disorder-corpus
                     , ambiata-mismi-core
                     , ambiata-mismi-s3
                     , ambiata-mismi-s3-test
                     , ambiata-p
                     , QuickCheck                      >= 2.7        && < 2.9
                     , quickcheck-instances            == 0.3.*
                     , temporary                       == 1.2.*
                     , text                            == 1.2.*

test-suite test-cli
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -fno-warn-missing-signatures
  hs-source-dirs:      test
  main-is:             test-cli.hs
  build-depends:       base                            >= 3          && < 5
                     , ambiata-box
                     , ambiata-disorder-core
